; ModuleID = '/home/carl/AnghaBench/darwin-xnu/tools/tests/TLBcoherency/extr_TLBcoherency.c_set_enable.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/tools/tests/TLBcoherency/extr_TLBcoherency.c_set_enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CTL_KERN = common dso_local global i32 0, align 4
@KERN_KDEBUG = common dso_local global i32 0, align 4
@KERN_KDENABLE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [39 x i8] c"trace facility failure, KERN_KDENABLE\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @set_enable(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca [6 x i32], align 16
  %4 = alloca i64, align 8
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* @CTL_KERN, align 4
  %6 = getelementptr inbounds [6 x i32], [6 x i32]* %3, i64 0, i64 0
  store i32 %5, i32* %6, align 16
  %7 = load i32, i32* @KERN_KDEBUG, align 4
  %8 = getelementptr inbounds [6 x i32], [6 x i32]* %3, i64 0, i64 1
  store i32 %7, i32* %8, align 4
  %9 = load i32, i32* @KERN_KDENABLE, align 4
  %10 = getelementptr inbounds [6 x i32], [6 x i32]* %3, i64 0, i64 2
  store i32 %9, i32* %10, align 8
  %11 = load i32, i32* %2, align 4
  %12 = getelementptr inbounds [6 x i32], [6 x i32]* %3, i64 0, i64 3
  store i32 %11, i32* %12, align 4
  %13 = getelementptr inbounds [6 x i32], [6 x i32]* %3, i64 0, i64 4
  store i32 0, i32* %13, align 16
  %14 = getelementptr inbounds [6 x i32], [6 x i32]* %3, i64 0, i64 5
  store i32 0, i32* %14, align 4
  %15 = getelementptr inbounds [6 x i32], [6 x i32]* %3, i64 0, i64 0
  %16 = call i64 @sysctl(i32* %15, i32 4, i32* null, i64* %4, i32* null, i32 0)
  %17 = icmp slt i64 %16, 0
  br i1 %17, label %18, label %20

18:                                               ; preds = %1
  %19 = call i32 @printf(i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str, i64 0, i64 0))
  br label %20

20:                                               ; preds = %18, %1
  ret void
}

declare dso_local i64 @sysctl(i32*, i32, i32*, i64*, i32*, i32) #1

declare dso_local i32 @printf(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
